--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,4 @@
 {
-    "plugins": [
-        "jest-dom",
-        "testing-library"
-    ],
-    "extends": [
-        "react-app",
-        "react-app/jest",
-        "plugin:testing-library/react",
-        "plugin:jest-dom/recommended"
-    ]
+  "plugins": ["jest-dom"],
+  "extends": ["react-app", "react-app/jest", "plugin:jest-dom/recommended"]
 }
